<resources>
    <string name="app_name">Real Estate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">username@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_properties">Properties Menu</string>
    <string name="menu_your_reservations">Your Reservations</string>
    <string name="menu_your_favorites">Your Favorites</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_featured_properties">Featured Properties</string>
    <string name="menu_profile_management">Profile Management</string>
    <string name="menu_contact_us">Contact Us</string>

    <!-- Connect API Strings -->
    <string name="connect_api_title">Welcome to Real Estate</string>
    <string name="connect_api_subtitle">Your journey to finding the perfect property starts here</string>
    <string name="connect_api_description">We\'re about to fetch the latest property listings from our database. This will help you explore available properties in your area with the most up-to-date information.</string>
    <string name="connect_button">Connect &amp; Explore</string>
    <string name="connecting_message">Connecting…</string>
    <string name="connection_failed">Connection failed. Please try again.</string>
    <string name="powered_by">Developed by Amr Zedan and Yazan AboEloun</string>

    <!-- Login Strings -->
    <string name="login_title">Welcome Back</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="register_button">Create Account</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="login_success">Login successful</string>
    <string name="todo">TODO</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="statistics_dashboard">Statistics Dashboard</string>
    <string name="view_all_reservations">View All Reservations</string>
    <string name="delete_customers">Delete Customers</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="special_offers">Special Offers</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="add_admin_text">Add New Administrator</string>
    <string name="property_details_not_available">Property details not available</string>
    <string name="location_not_specified">Location not specified</string>
    <string name="about_icon">About Icon</string>
    <string name="about_real_estate">About Real Estate</string>
    <string name="real_estate_description">Real Estate is your trusted partner in finding the perfect property. With over 15 years of experience in the real estate market, we have helped thousands of families find their dream homes and investors discover profitable opportunities.</string>
</resources>

