<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_building"
            android:title="@string/menu_properties" />
        <item
            android:id="@+id/nav_your_reservations"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_your_reservations" />        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_featured_properties"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_featured_properties" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_contact_us" />
    </group>

    <item android:title="My Account">
        <menu>
            <item
                android:id="@+id/nav_profile_management"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_profile_management" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>