<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/statistics_dashboard" />
        <item
            android:id="@+id/nav_view_all_reservations"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/view_all_reservations" />
        <item
            android:id="@+id/nav_delete_customers"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete_customers" />
        <item
            android:id="@+id/nav_add_new_admin"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add_new_admin" />
        <item
            android:id="@+id/nav_special_offers"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/special_offers" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_admin_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
